Issue #SC-824 feat: ansible druid scripts for 0.13 incubating