@@ -1,13 +1,12 @@
 -server
--Xmx12g
--Xms12g
--XX:NewSize=6g
--XX:MaxNewSize=6g
--XX:MaxDirectMemorySize=32g
--XX:+UseConcMarkSweepGC
+-Xms{{ druid_historical_heap_size }}
+-Xmx{{ druid_historical_heap_size }}
+-XX:MaxDirectMemorySize={{ druid_historical_max_direct_size }}
 -XX:+PrintGCDetails
 -XX:+PrintGCTimeStamps
+-Xloggc:{{ druid_historical_gc_logfile }}
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
+-Djava.io.tmpdir={{ druid_historical_tmp_dir }}
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
--Djava.io.tmpdir=/mnt/tmp
+
