@@ -1,10 +1,10 @@
 -server
--Xmx64m
--Xms64m
--XX:+UseConcMarkSweepGC
+-Xmx{{ druid_middlemanager_heap_size }}
+-Xms{{ druid_middlemanager_heap_size }}
 -XX:+PrintGCDetails
 -XX:+PrintGCTimeStamps
+-Xloggc:{{ druid_middlemanager_gc_logdir }}
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
--Djava.io.tmpdir=/mnt/tmp
+-Djava.io.tmpdir={{ druid_middlemanager_tmp_dir }}
